# geometric.computing

./: CMakeLists.txt  README.md  main.cpp  point2d.h
01-Euclidean2D/: direction2d.h  main.cpp  point2d.cpp  point2d.h  segment2d.h  vector2d.h
